5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1637_869.log
== TEST (2019-04-09 10:46:17) 
-- CODE:
valor=int(input("entre com o valor da compra: "))

if(valor>=200)

	print(valor-( valor*5/100))
	
else:
	
	print(valor)
-- ERROR:
File "XXXX", line 3
    if(valor>=200)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:46:29) 
-- CODE:
valor=int(input("entre com o valor da compra: "))

if(valor>=200):

	print(valor-( valor*5/100))
	
else:
	
	print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '200.09'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:46:45) 
-- CODE:
valor=int(input("entre com o valor da compra: "))

if(valor>=200):

	print(valor-( valor*5/100))
	
else:
	
	print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '200.09'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:47:28) 
-- CODE:
valor=int(input("entre com o valor da compra: "))

if(valor>=200):

	print(round(valor-( valor*5/100)))
	
else:
	
	print(round(valor,2))
-- EXECUTION TIME:
0.183018
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/869/main.py", line 1, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '200.09'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:47:56) 
-- CODE:
valor=int(input("entre com o valor da compra: "))

if(valor>=200):

	print(round(valor-( valor*5/100),2))
	
else:
	
	print(round(valor,2))
-- EXECUTION TIME:
0.145828
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/869/main.py", line 1, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '200.09'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:47:59) 
-- CODE:
valor=int(input("entre com o valor da compra: "))

if(valor>=200):

	print(round(valor-( valor*5/100),2))
	
else:
	
	print(round(valor,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '200.09'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:49:10) 
-- CODE:
valor=int(input("entre com o valor da compra: "))

if(valor>=200):

	print(round(valor-( valor*5/100),2))
	
else:
	
	print(round(valor,2))
-- EXECUTION TIME:
0.140273
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/869/main.py", line 1, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '200.09'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:50:50) 
-- CODE:
valor=int(input("entre com o valor da compra: "))

if(valor>=200):

	valor_pago=(valor-( valor*5/100))
	print(round(valor_pago,2))
	
else:
	
	print(round(valor,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '200.09'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:50:58) 
-- CODE:
valor=int(input("entre com o valor da compra: "))

if(valor>=200):

	valor_pago=(valor-( valor*5/100))
	print(round(valor_pago,2))
	
else:
	
	print(round(valor,2))
-- EXECUTION TIME:
0.160811
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/869/main.py", line 1, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '200.09'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:51:07) 
-- CODE:
valor=int(input("entre com o valor da compra: "))

if(valor>=200):

	valor_pago=(valor-( valor*5/100))
	print(round(valor_pago,2))
	
else:
	
	print(round(valor,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '200.09'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:51:37) 
-- CODE:
valor=int(input("entre com o valor da compra: "))

if(valor>=200):

	valor_pago=(valor-( valor*5/100))
	print(round(valor_pago,2))
	
else:
	
	print(round(valor,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '200.09'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:51:47) 
-- CODE:
valor=int(input("entre com o valor da compra: "))

if(valor>=200):

	valor_pago=(valor-( valor*5/100))
	print(round(valor_pago,2))
	
else:
	
	print(round(valor,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '200.09'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:52:08) 
-- CODE:
valor=float(input("entre com o valor da compra: "))

if(valor>=200):

	valor_pago=(valor-( valor*5/100))
	print(round(valor_pago,2))
	
else:
	
	print(round(valor,2))
-- EXECUTION TIME:
0.236261
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
